templates: Use 0.0.0.0 as default for IPv4

--- a/templates/default/pdns.conf.erb
+++ b/templates/default/pdns.conf.erb
@@ -18,7 +18,7 @@ disable-axfr=no
 <% end %>
 
 <% if node['pdns']['bind_inet'].empty? %>
-local-address=
+local-address=0.0.0.0
 <% else %>
 local-address=<%= node['pdns']['bind_inet'] %>
 <% end %>
